<resources>
    <string name="app_name">PCGate</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_cart">Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="call_support">Call Support</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Create an Account</string>
    <string name="click_to_login">Already have an account? Login!</string>
    <string name="click_to_register">Don\'t have an account? Register!</string>
    <string name="logout">Logout</string>
    <string name="total_0_00_ron">Total: $0.00</string>
    <string name="checkout">Checkout</string>
    <string name="price">Price</string>
    <string name="case_name">Case Name</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="case_image">case image</string>
    <string name="back">Back</string>
    <string name="memory_image">Memory Image</string>
    <string name="all_memory">All Memory</string>
    <string name="cpu_image">CPU Image</string>
    <string name="custom_tab">custom tab</string>
    <string name="carcase">Carcase</string>
    <string name="procesoare">Procesoare</string>
    <string name="memorii">Memorii</string>
    <string name="item_name">Item Name</string>
    <string name="dol_0_00_">$0.00</string>
    <string name="item_case_name">Case Name</string>
    <string name="pret">Pret</string>
    <string name="memory_name">Memory Name</string>
    <string name="placi_de_baza">Placi de baza</string>
    <string name="motherboard_image">placa de baza</string>
    <string name="placi_video">Placi Video</string>
    <string name="gpu_image">gpu image</string>
    <string name="item_gpu_name">item gpu name</string>
    <string name="surse">Surse</string>
    <string name="all_psu">All PSUs</string>
    <string name="psu_image">PSU Image</string>
    <string name="item_psu_name">PSU Name</string>
    <string name="laptopuri">Laptopuri</string>
    <string name="laptop_image">Laptop image</string>
    <string name="item_laptop_model">Model</string>
    <string name="all_laptops">All Laptops</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="chat_with_gemini_ai">Chat with Gemini AI</string>
    <string name="item_motherboard_name">item motherboard name</string>
    <string name="motherboard_name">motherboard name</string>
    <string name="new_chat">New Chat</string>
    <string name="type_a_message">Type a message…</string>
    <string name="send">Send</string>
    <string name="ai_keywords_categories">Store keywords: case, cpu, laptop, memory, motherboard, power-supply, video-card.</string>
    <string name="ai_icon">ai icon</string>
    <string name="user_icon">user icon</string>
    <string name="chat_history">Chat History</string>
    <string name="pcgate">PCGate</string>
    <string name="enter_full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="username_text">Username</string>
    <string name="next">Next</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select_your_age">Select Your Date of Birth</string>
    <string name="otp_code_text">Email\nVerification</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Code</string>
    <string name="verify_code">Verify Code</string>
    <string name="One_time_request">Please check your email to confirm your address.\nDon\'t forget to check your spam folder as well, as the confirmation might be there.\n\nAfter confirming your email, please press next to proceed with the rest of the registration!</string>
    <string name="tell_us_more_about_yourself">Tell us more about yourself!</string>
    <string name="what_s_your_occupation">What\'s Your Occupation?</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="username">Username:</string>
    <string name="full_name">Full Name:</string>
    <string name="email_profile">Email:</string>
    <string name="phone">Phone:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="gender">Gender:</string>
    <string name="occupation">Occupation:</string>
    <string name="welcome_user">Welcome, User</string>
    <string name="need_help_call_support">Need help? Call support!</string>
    <string name="agree_to_terms_and_conditions">Agree to terms and conditions</string>
</resources>