<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="140dp"
    android:layout_height="260dp"
    android:orientation="vertical"
    android:background="@color/surface"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:padding="6dp">

    <ImageView
        android:id="@+id/laptopImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/laptop_image"
        android:scaleType="fitCenter"
        android:background="@color/surface" />

    <TextView
        android:id="@+id/laptopModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_laptop_model"
        android:textStyle="bold"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:ellipsize="end"
        android:maxLines="2"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"
        android:textColor="@color/on_surface" />

    <TextView
        android:id="@+id/laptopPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pret"
        android:textSize="13sp"
        android:textColor="@color/on_surface"
        android:gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />
    <!-- Add to Cart Button always at bottom -->
    <Button
        android:id="@+id/buttonAddToCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_cart"
        android:textSize="13sp"
        android:layout_gravity="bottom"
        android:background="@color/primary"
        android:textColor="@color/on_primary" />

</LinearLayout>
